======================

Version 1.2.0
-------------

This version has not been released yet.

Build System:

 * cURL is no longer required to build CouchDB as it is only
   used by the command line JS test runner. If cURL is available
   when building CouchJS you can enable the HTTP bindings by
   passing -H on the command line.

HTTP Interface:

 * Added a native JSON parser.

Replicator:

 * A new replicator implementation. It offers more performance and
   configuration options.
 * Passing non-string values to query_params is now a 400 bad
   request. This is to reduce the surprise that all parameters
   are converted to strings internally.

Storage System:

 * Added optional database and view index file compression (using Google's
   snappy or zlib's deflate).
 * Several performance improvements, most notably regarding database writes
   and view indexing.
 * Computation of the size of the latest MVCC snapshot data and all its
   supporting metadata, both for database and view index files. This
   information is exposed as the `data_size` attribute in the database and
   view group information URIs.
 * The size of the buffers used for database and view compaction is now
   configurable.

OAuth:

 * Updated budled erlang_oauth library to the latest version.

Futon:

 * The `Status` screen (active tasks) now displays two new task status
   fields: `Started on` and `Updated on`.

Version 1.1.1
-------------

This version has not been released yet.

* ETags for views include current sequence if include_docs=true.

Version 1.1.0
-------------

All CHANGES for 1.0.2 and 1.0.3 also apply to 1.1.0.

HTTP Interface:

 * Native SSL support.
 * Added support for HTTP range requests for attachments.
 * Added built-in filters for `_changes`: `_doc_ids` and `_design`.
 * Added configuration option for TCP_NODELAY aka "Nagle".
 * Allow POSTing arguments to `_changes`.
 * Allow `keys` parameter for GET requests to views.
 * Allow wildcards in vhosts definitions.